--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Jon Portfolio</title>
+	<link rel="stylesheet" href="http://bootswatch.com/cerulean/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
